--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <!-- <link rel="stylesheet" href="./assets/styles/style.css"> -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <%= stylesheet_link_tag "styles/style.css", media: "all" %>
     <meta charset="utf-8">
     <title>t.roS</title>
   </head>
   <body>
-    <h1>troS</h1>
+    <h1 class="main-banner">t.roS</h1>
+    <div class="stats-holder">
+      <h2 class="stats-banner">Access Time: <span id=access></span>ms</h2>
+      <h2 class="stats-banner">Compare Time: <span id=compare></span>ms</h2>
+      <h2 class="stats-banner">Swap Time: <span id=swap></span>ms</h2>
+    </div>
+
     <form action="index.html" method="post">
       <select id="sort-type-1">
         <option value="insertion">Insertion Sort</option>
@@ -18,6 +23,8 @@
         <option value="insertion">Insertion Sort</option>
         <option value="selection">Selection Sort</option>
         <option value="bubble">Bubble Sort</option>
+        <option value="quick">Quick Sort</option>
+        <option value="merge">Merge Sort</option>
       </select>
     </form>
     <button type="button" id="shuffleButton">Shuffle</button>
@@ -31,10 +38,8 @@
     </div>
   </body>
 
-  <!-- <script src="./scripts/Sort.js" type="text/javascript"></script>
-  <script src="./scripts/Graph.js" type="text/javascript"></script>
-  <script src="./scripts/main.js" type="text/javascript"></script> -->
-  <script src="./assets/scripts/Graph.js" type="text/javascript"></script>
-  <script src="./assets/scripts/Sort.js" type="text/javascript"></script>
-  <script src="./assets/scripts/main.js" type="text/javascript"></script>
+  <%= javascript_include_tag "application"%>
+  <%= javascript_include_tag "scripts/Graph.js"%>
+  <%= javascript_include_tag "scripts/Sort.js"%>
+  <%= javascript_include_tag "scripts/main.js"%>
 </html>
