--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -22,7 +22,7 @@
           <%=text_field_tag "Swap", "10"%>
         </div>
         <div class="form-item">
-          <%= submit_tag "Update"%>
+        <input type="submit" value="Update">
         </div>
       </form>
     </div>
