--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -27,11 +27,16 @@ html {
   text-align: center;
 }
 button {
-  width: 24%;
+  cursor: pointer;
+  width: 20%;
   font-family: var(--site-font);
   font-size: 2.5em;
   margin: 10px 5%;
   border-radius: 20px;
+}
+
+div.data > *{
+  font-family: var(--site-font);
 }
 
 .main-banner{
@@ -66,7 +71,7 @@ button {
 .graph-container {
   text-align: center;
   display: inline-block;
-  width: 49%;
+  width: 48%;
 }
 
 .data {
@@ -99,6 +104,38 @@ button {
   100% {
     background:var(--main-graph-color);
   }
+}
+
+/************** RECORD STYLES *****************/
+
+.record-item {
+  background: white;
+  border-radius: 5px;
+  margin: 5px;
+  border: 2px solid black;
+  font-family: var(--site-font)
+}
+
+.record-item h3{
+  font-size: 2em;
+  color: var(--graph-blink-color);
+}
+
+.record-sizing, .record-timing {
+  color: var(--graph-blink-color);
+  margin: 10px 15px;
+  font-size: 1.5em;
+  float:right;
+}
+
+.record-timing {
+  clear: right;
+}
+
+.deleteButton {
+  font-size: 1em;
+  color: black;
+  background-color: var(--graph-blink-color);
 }
 
 /************** SIDEBAR STYLES ****************/
