--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -11,8 +11,8 @@ html {
   color: var(--main-graph-color);
 }
 
-html {
-  /* background: linear-gradient(to right, magenta, teal); */
+html, body {
+  margin: 0;
 
 }
 
@@ -39,11 +39,18 @@ div.data > *{
   font-family: var(--site-font);
 }
 
+.centered {
+  text-align: center;
+}
+
 .main-banner{
   font-family: var(--site-font);
-  content: "t.roS";
+  /* content: "t.roS"; */
+  background-color: black;
+  font-size: 3em;
+  margin: 0;
+  padding: 10px;
   text-align: center;
-  animation: unscramble 3s linear normal;
 }
 
 .stats-banner {
@@ -54,6 +61,12 @@ div.data > *{
 }
 
 .stats-holder {
+  border: 2px solid black;
+  background-color: white;
+  border-radius: 20px;
+  display: inline-block;
+  padding: 10px;
+  margin: 15px;
   text-align: center;
 }
 
@@ -61,7 +74,6 @@ div.data > *{
   width: 45vw;
   height: 50vh;
   display: inline-block;
-  /* border: 1px solid black; */
 }
 
 .graph-left {
@@ -72,6 +84,10 @@ div.data > *{
   text-align: center;
   display: inline-block;
   width: 48%;
+}
+
+.all-graphs-container {
+  margin-left: 3%;
 }
 
 .data {
@@ -92,8 +108,6 @@ div.data > *{
 }
 
 .changed{
-  background-color: var(--graph-blink-color);
-
   animation: flash 1s forwards linear normal;
 }
 
@@ -106,19 +120,34 @@ div.data > *{
   }
 }
 
+/************** BANNER MADNESS ****************/
+h1 span {
+  display: inline-block;
+  width: .5em;
+  margin: 0;
+  padding: 0;
+  transition: 1s;
+}
+
 /************** RECORD STYLES *****************/
 
 .record-item {
   background: white;
   border-radius: 5px;
-  margin: 5px;
-  border: 2px solid black;
+  margin: 0 15px;
+  /* border: 2px solid black; */
+  box-shadow: 0px 0px 15px black;
   font-family: var(--site-font)
 }
 
 .record-item h3{
   font-size: 2em;
+  padding: 10px 15px 0 15px;
   color: var(--graph-blink-color);
+}
+
+#sort-records:last-child{
+  margin-bottom: 20px;
 }
 
 .record-sizing, .record-timing {
@@ -139,10 +168,20 @@ div.data > *{
 }
 
 /************** SIDEBAR STYLES ****************/
+.prefs-banner{
+  font-family: var(--site-font);
+  background-color: black;
+  margin: 0;
+  padding: 5px;
+  text-align: center;
+}
+
+
 div.side-menu {
-  height: 100%;
+  height: calc(100% - 113px);
   width: 20vw;
-  left: -21vw;
+  max-width: 240px;
+  transform: translateX(-100%);
   position: fixed;
   background-color: white;
   border: 2px solid black;
@@ -167,7 +206,7 @@ div.side-menu {
 }
 
 div.open {
-  left: 0;
+  transform: translateX(0%);
 }
 
 label {
